# Resource-Management-System

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  new file 2.txt  new file.txt  newfile.txt  setup.ps1  setup.sh
cmake/: FindPCAP.cmake
src/: CMakeLists.txt  readme.md
src/cli/: CMakeLists.txt  cli_interface.h  main.cpp
src/core/: CMakeLists.txt  metrics.h
src/core/alerts/: alert_manager.cpp  alert_manager.h
src/core/cpu/: cpu_common.cpp  cpu_common.h  cpu_factory.cpp  cpu_linux.cpp  cpu_linux.h  cpu_windows.cpp  cpu_windows.h
src/core/database/: database.cpp  database.h
src/core/disk/: disk_common.cpp  disk_common.h  disk_factory.cpp  disk_linux.cpp  disk_linux.h  disk_windows.cpp  disk_windows.h
src/core/gpu/: gpu_common.cpp  gpu_common.h  gpu_factory.cpp  gpu_linux.cpp  gpu_linux.h  gpu_windows.cpp  gpu_windows.h
src/core/memory/: memory_common.cpp  memory_common.h  memory_factory.cpp  memory_linux.cpp  memory_linux.h  memory_windows.cpp  memory_windows.h
src/core/network/: network_common.cpp  network_common.h  network_factory.cpp  network_linux.cpp  network_linux.h  network_windows.cpp  network_windows.h
src/core/process/: process_common.cpp  process_common.h  process_factory.cpp  process_linux.cpp  process_linux.h  process_windows.cpp  process_windows.h
src/core/system_info/: system_info.cpp  system_info.h
src/gui/: CMakeLists.txt  app.h  gui_interface.h  main.cpp  theme.h
src/tests/: CMakeLists.txt  alert_tests.cpp  cpu_tests.cpp  database_tests.cpp  disk_tests.cpp  logger_tests.cpp  memory_tests.cpp  network_tests.cpp  process_tests.cpp
src/utils/: CMakeLists.txt  logger.cpp  logger.h  scrolling_buffer.h
